assets/styles.css
* {
    font-family: Georgia, 'Times New Roman', Times, serif;
}

body {
    background-color: #a4d4ff;
}

header {
    background-color: #ffa4d4;
    padding: 10px;
    text-align: center;
    position: fixed;
    top: 0;
    width: 100%;
}

footer {
    background-color: #ffa4d4;
    padding: 10px;
    font-size: smaller;
}

nav {
    display: inline;
}

#main-panel {
    background-color: #d4ffa4;
    padding: 10px;
}

figure.centered {
    text-align: center;
}

figure.centered>figcaption {
    font-size: smaller;
}

#contact-form {
    background-color: #96e593;
    text-align: center;
    padding: 10px;
    width: 50%;
    margin: auto;
}

